--- a/index.html
+++ b/index.html
@@ -3,21 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Algo Mais ou Menos</title>
+    <title>Novo_Algo Mais ou Menos</title>
 </head>
 <body>
     <main>
         <div>
-            <h1>Algo Mais ou Menos</h1>
+            <h1>Louvores que tocam a alma</h1>
             <p style="background-color: aquamarine;">
                 Algo <strong>mais ou menos</strong> é algo que nem é exagerado demais, nem é tão simples demais, mas que no final realmente é muito interessante.
             </p>
         </div>
         <div>
-            <video src="Eliabe   Filho da Promessa 1980  cd completo(360P).mp4" controls></video>
-            <legend>Eliabe Chagas - Músicas inspiradas por Deus.</legend>
-            <img src="Cristina_Mel_-_Tem_Coisas.jpg" alt="Cantora gospel_Cristina  Mel">
+            <video width="400px" src="Eliabe   Filho da Promessa 1980  cd completo(360P).mp4" controls></video>
+            <legend>Eliabe Chagas - Músicas inspiradas por Deus.</legend><hr>
+            <img width="300px" src="Cristina_Mel_-_Tem_Coisas.jpg" alt="Cantora gospel_Cristina  Mel">
             <legend>Cristina_Mel_-_Tem_Coisas_que_a_gente_não_esquece</legend>
+            <audio src="Sigo Cantando.mp3"controls>Mara Dalila</audio>
+            <img width="300px" src ="Mara Dalila.jpeg" alt="Mara Dalila">
+            <audio src="Se a Cruz falasse.mp3"controls>Mara Dalila</audio>
+            <br>
+            <audio src="Chame por Ele.mp3"controls>Lauriete</audio>
+            <img  width="300px" src ="Lauriete.jpeg" alt="Lauriete">
+            <audio src="O Segredo e louvar.mp3" controls>Lauriete</audio>
         </div>
     </main>
 </body>
