Nova versão do-Algo-a-mais

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div>
             <h1>Algo Mais ou Menos</h1>
             <p style="background-color: aquamarine;">
-                <strong>Alterei esta Branch com algo a mais.</strong> Algo <strong>mais ou menos</strong> é algo que nem é exagerado demais, nem é tão simples demais, mas que no final realmente é muito interessante.
+                <strong>Alterei esta Branch cde novo om algo a mais.</strong> Algo <strong>mais ou menos</strong> é algo que nem é exagerado demais, nem é tão simples demais, mas que no final realmente é muito interessante.
             </p>
         </div>
         <div>
