Novo=Algo-a-mai

--- a/index.html
+++ b/index.html
@@ -18,14 +18,30 @@
             <legend>Eliabe Chagas - Músicas inspiradas por Deus.</legend><hr>
             <img width="300px" src="Cristina_Mel_-_Tem_Coisas.jpg" alt="Cantora gospel_Cristina  Mel">
             <legend>Cristina_Mel_-_Tem_Coisas_que_a_gente_não_esquece</legend>
+            
+            <img width="300px" src ="Mara Dalila.jpeg" alt="Mara Dalila"><br>
             <audio src="Sigo Cantando.mp3"controls>Mara Dalila</audio>
-            <img width="300px" src ="Mara Dalila.jpeg" alt="Mara Dalila">
+            <legend>Sigo Cantando</legend>
             <audio src="Se a Cruz falasse.mp3"controls>Mara Dalila</audio>
+            <legend>Se a cruz falasse</legend>
             <br>
             <audio src="Chame por Ele.mp3"controls>Lauriete</audio>
-            <img  width="300px" src ="Lauriete.jpeg" alt="Lauriete">
+            <legend>Chame por Ele</legend>
+            <img  width="300px" src ="Lauriete.jpeg" alt="Lauriete"><br>
             <audio src="O Segredo e louvar.mp3" controls>Lauriete</audio>
+            <legend>O Segredo é Louvar</legend>
         </div>
     </main>
+    <footer>
+        <h3>Cantores Evangelicos que marcaram sua geração</h3>
+        <div>
+            <ul>
+                <li style="color: blue; border: 3px;">Eliabe Chagas</li>
+                <li style="color: aqua; border: 3px;">Cristina Mel</li>
+                <li style="color: rgb(194, 8, 39); border: 3px;">Mara Dalila</li>
+                <li style="color: rgb(120, 214, 12); border: 3px;">Lauriete</li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
