Alterado de novo no último vídeo
vai dar certo

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <audio src="O Segredo e louvar.mp3" controls>Lauriete</audio>
             <legend>O Segredo é Louvar</legend>
         </div>
+        <h3>Alterado mais uma vez no último vídeo</h3>
     </main>
     <footer>
         <h3>Cantores Evangelicos que marcaram sua geração</h3>
